unpackaged/main/default/objects/AccountContactRelation/fields/a_AccountName__c.field-meta.xml
<CustomField>
    <fullName>a_AccountName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Contact.Account.Id, Contact.Account.Name, &quot;/view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>