unpackaged/main/default/objects/AccountContactRelation/fields/a_AccountType__c.field-meta.xml
<CustomField>
    <fullName>a_AccountType__c</fullName>
    <formula>Contact.a_PrimaryAccountType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountType</label>
    <type>Text</type>
</CustomField>