unpackaged/main/default/objects/AccountContactRelation/fields/a_contactname__c.field-meta.xml
<CustomField>
    <fullName>a_contactname__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Contact.Id, Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName, &quot;/view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>