unpackaged/main/default/objects/AccountContactRelation/fields/a_ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>a_ContactPhone__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactPhone</label>
    <type>Text</type>
</CustomField>