unpackaged/main/default/objects/AccountContactRelation/fields/a_ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>a_ContactTitle__c</fullName>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactTitle</label>
    <type>Text</type>
</CustomField>