unpackaged/main/default/objects/AccountContactRelation/fields/a_Type_aide__c.field-meta.xml
<CustomField>
    <fullName>a_Type_aide__c</fullName>
    <inlineHelpText>Type aide du proche ou prestation fournies si suivi simultané.</inlineHelpText>
    <label>Type aide</label>
    <length>120</length>
    <type>Text</type>
</CustomField>